simple examples